# wondarr

./: .gitignore  Cargo.toml  README.md  setup.sh
src/: main.rs  static_files.rs
web-ui/: package-lock.json  package.json
